# gopro_native

./: .clang-format  .clang-tidy  .gitignore  .pubignore  ANNOUNCEMENT.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pubspec.yaml
.github/workflows/: ci.yml  publish.yml
cmake/: check_no_claim.cmake
example/: README.md  ble_status.dart  discover.dart  http_probe.dart  livestream.dart  wifi_ap.dart  wifi_scan.dart
hook/: build.dart
lib/: gopro_native.dart
lib/proto/: cohn.dart  control.dart  livestream.dart  media.dart  network.dart  presets.dart
lib/src/: ble_transport.dart  discovery.dart  secret.dart
lib/src/cohn/: cohn_client.dart  cohn_http.dart  credentials.dart
lib/src/ffi/: bindings.dart  ble_bindings.dart  ble_codec.dart  codec.dart  link_types.dart  types.dart
lib/src/http/: commands.dart  gopro_http.dart  http_message.dart
lib/src/internal/: library_loader.dart
lib/src/streaming/: livestream.dart  webcam.dart
lib/src/wifi/: access_point.dart  network_client.dart  wifi_controller.dart
native/: CMakeLists.txt  gopro_nc.map
native/include/: ble_bridge.h  ble_link.h  ble_protocol.h  ble_session.h  command_queue.h  glaze_meta.h  gopro_bridge.h  gopro_types.h  gopro_usb.h  link_bridge.h  query_parser.h
native/src/: ble_bridge.cpp  ble_link.cpp  ble_protocol.cpp  ble_session.cpp  command_queue.cpp  gopro_bridge.cpp  gopro_usb.cpp  link_bridge.cpp  query_parser.cpp
native/test/: ble_link_test.cpp  ble_protocol_test.cpp  ble_session_test.cpp  command_queue_test.cpp  query_parser_test.cpp
scripts/: clang_tidy.sh
test/: ble_codec_test.dart  codec_test.dart  cohn_test.dart  constants_test.dart  gopro_http_test.dart  http_message_test.dart  link_ffi_test.dart  network_test.dart  proto_test.dart  protobuf_correlation_test.dart  secret_test.dart  streaming_test.dart  wifi_test.dart
tool/: gen_constants.py  gen_http_commands.py  gen_proto.py  review_gates.py
udev/: 99-gopro.rules
